--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-multi-carousel": "^2.5.5",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "yup": "^0.29.1"
   },
   "scripts": {
