--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "redux-undo": "^1.0.1",
     "yup": "^0.29.1"
   },
   "scripts": {
