--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-format-text": "^1.1.1",
     "react-icons": "^3.10.0",
     "react-modal": "^3.11.2",
     "react-multi-carousel": "^2.5.5",
