--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "redux-undo": "^1.0.1",
+    "serve": "^11.3.2",
     "yup": "^0.29.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
